# APO-Lab-App

./: CMakeLists.txt  customfilterdialog.cpp  imageviewer.cpp  mainwindow.cpp  mainwindow.h  rangestretchingdialog.cpp  rangestretchingdialog.h
.github/workflows/: cmake-multi-platform.yml
include/: bitwiseoperationdialog.h  clickablelabel.h  customfilterdialog.h  directionselectiondialog.h  histogramwidget.h  houghdialog.h  imageoperation.h  imageprocessing.h  imageviewer.h  inpaintingdialog.h  inputdialog.h  mainwindow.h  pointselectiondialog.h  previewdialogbase.h  rangestretchingdialog.h  twostepfilterdialog.h
src/: bitwiseoperationdialog.cpp  customfilterdialog.cpp  directionselectiondialog.cpp  histogramwidget.cpp  houghdialog.cpp  imageoperation.cpp  imageprocessing.cpp  imageviewer.cpp  inpaintingdialog.cpp  inputdialog.cpp  mainwindow.cpp  rangestretchingdialog.cpp  twostepfilterdialog.cpp
